# dsstructure

./: README.md  app.py  pyproject.toml
notebooks/: eda.ipynb
requirements/: requirements-dev.txt  requirements.txt
