[tool.poetry]
name = "sia-datascience-template"
version = "0.1.0"
description = ""
authors = ["Siavash Rezazadeh"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
